[package]
name = "outlet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
futures = "0.3"
bytes = "1.5"
http-body-util = "0.1"
pin-project-lite = "0.2"
thiserror = "2.0"
async-stream = "0.3"
anyhow = "1.0"

[dev-dependencies]
tower-test = "0.4"
axum-test = "17.0"
tokio-test = "0.4"
hyper = "1.0"
tracing-test = "0.2"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
flamegraph = "0.6"

[[example]]
name = "demo"
path = "examples/demo.rs"

