[package]
name = "outlet"
version = "0.6.0"
edition = "2021"
description = "HTTP request/response logging middleware for Axum with streaming support"
license = "MIT"
repository = "https://github.com/doublewordai/outlet"
keywords = ["axum", "middleware", "logging", "http", "tracing"]
categories = ["web-programming"]
authors = ["fergus.finn@doubleword.ai"]

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
futures = "0.3"
bytes = "1.5"
http-body-util = "0.1"
thiserror = "2.0"
anyhow = "1.0"
metrics = "0.24"

[dev-dependencies]
axum-test = "18.0"


[[example]]
name = "demo"
path = "examples/demo.rs"

